--- a/baskerville2.html
+++ b/baskerville2.html
@@ -49,7 +49,7 @@
            </section>
            </article>
            
-           <footer id="contact">
+           <footer id="contact"/>
 
                <p>The content on this page is developed from original copy from Wikipedia and licensed under a Creative Commons Attribution-ShareAlike License, meaning you’re allowed to copy, distribute and transmit the work as long as it is attributed to the original authors.</p>
                <a href="http:/www.blogs.ulster.ac.uk/leoniesmyth/" target="_blank" title="Take a lot at my blog.">View my work</a>
