--- a/baskerville4.html
+++ b/baskerville4.html
@@ -26,6 +26,8 @@
 <article>
     <header>
        <h1>John Baskerville<h1>
+           <img src="images/john-baskerville.jpg" alt="A portrait of John Baskerville" title="John Baskerville designed his famous serif typeface in 1757" />
+                
             <h2>Letter Founder & Master Printer<h2>
                 <p>John Baskerville (1706–1775) was an English businessman whose entrepreneurial attentions included <i>japanning</i> and <i>papier-mâché<i/>; he is, however, best remembered as a typographer and printer, not least for the design of the eponymous typeface which, to this very day, bears his name.<p>
  </header>
