--- a/baskerville3.html
+++ b/baskerville3.html
@@ -9,7 +9,7 @@
     <link href="css/style2.css" type="text/css" rel="stylesheet" />
     
     <!-- ADDED GOOGLE FONT-->
-    link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         
 <head>
