--- a/baskerville4.html
+++ b/baskerville4.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
     <ul>
-        <li><a href="#the-man"</a></li>
+        <li><a href="#the-man">The Man</a></li>
         <li><a href="#the-typeface">The Tyepface</a></li>
         <li><a href="#mrs-eaves">Mrs Eaves</a></li>
         <li><a href="#contact">Contact</a></li>
