--- a/history4.html
+++ b/history4.html
@@ -19,7 +19,7 @@
 <article>
 <header>
 <h1>A Brief History of Type</h1>
-<h1 id="Part-1-–-Pioneers-of-European-Type-Design">Part 1 - Pioneers of European Type Design</h1>
+<h1 id="part-1-pioneers-of-european-type-design">Part 1 - Pioneers of European Type Design</h1>
 
 <p>In this series we take a look at the development of type design throughout Europe from Jenson’s classic design to the strength of Bodoni’s timeless creation.</p>
 </header>
@@ -49,7 +49,7 @@
 </section>
 
 <header>
-    <h1 id="Types-of-Typefaces">Types of Typefaces (1967)</h1>
+    <h1 id="types-of-typefaces">Types of Typefaces (1967)</h1>
     </header>
     
 <section>
