--- a/history4.html
+++ b/history4.html
@@ -26,6 +26,7 @@
     
 <section>
     <h2>Nicolas Jenson</h2>
+    <img src="images/nicholas-jenson.gif" alt="nicolas jenson portrait" title="nicolas jenson 1420-1480"  width:300px;height:400px;/>
 
 <p>Nicholas Jenson (1420 – 1480) was a French engraver, pioneer, printer and type designer who carried out most of his work in Venice, Italy. Jenson acted as <i>Master of the French Royal Mint</i> at Tours, and is credited as the creator of one of the finest early Roman typefaces.</p>
 
@@ -33,6 +34,8 @@
 
 <section>
     <h2>Claude Garamont</h2>
+    <img src="images/claude-garamond.png" alt="claude garamont portrait" title="claude garamont"  width:300px;height:400px;/>
+
 
 <p>Claude Garamont (1510 – 1561), known commonly as Claude Garamond, was a French type designer, publisher and punchcutter based in Paris. Garamond worked as an engraver of punches, the masters used to stamp matrices, the moulds used to cast metal type. He worked in the tradition of what is now called old-style serif letter design, that produced letters with a relatively organic structure resembling handwriting with a pen but with a slightly more structured and upright design.</p>
 
@@ -40,6 +43,8 @@
 
 <section>
     <h2>William Caslon</h2>
+    <img src="images/william-caslon.jpg" alt="william caslon portrait" title="william caslon"  width:300px;height:400px;/>
+
 
 <p>William Caslon I (1692 – 1766), also known as William Caslon the Elder, was an English gunsmith and designer of typefaces. The distinction and legibility of his type secured him the patronage of the leading printers of the day in England and the continent. His typefaces transformed English type design and first established an English national typographic style.</p>
 
@@ -54,6 +59,8 @@
     
 <section>
     <h2>John Baskerville</h2>
+    <img src="images/John_Baskerville_(1706%E2%80%931775)_by_James_Millar.jpeg" alt="john baskerville portrait" title="john baskerville"  width:300px;height:400px;/>
+
 
 <p>John Baskerville (1706 – 1775) was an English businessman whose entrepreneurial attentions included japanning and papier-mâché; he is, however, best remembered as a typographer and printer, not least for the design of the eponymous typeface which, to this very day, bears his name.</p>
 
@@ -61,6 +68,8 @@
 
 <section>
     <h2>Giambattista Bodoni</h2>
+    <img src="images/giambattista_bodoni.jpg" alt="giambattista bodoni portrait" title="giambattista bondoni"  width:300px;height:400px;/>
+
 
 <p>Giambattista Bodoni (1740 – 1813) was an Italian typographer, type designer, compositor, printer and publisher in Parma. He first took the type designs of <b>Pierre Simon Fournier</b> as his exemplars, but afterwards became an admirer of the more modelled types of <b>John Baskerville;</b> and he and <b>Firmin Didot</b> evolved a style of type called 'New Face', in which the letters are cut in such a way as to produce a strong contrast between the thick and thin parts of their body.</p> 
 
